--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
         {% block head %}{% endblock %}
     </head>
     <body>
         <h1>liz & meg.</h1>
-            <h3>
+            <h2>
                 <a href="{{ url_for('index') }}">Home</a>
                 <a href="{{ url_for('ceremony') }}">Ceremony</a>
                 <a href="{{ url_for('history') }}">History</a>
                 <a href="{{ url_for('contact') }}">Contact</a>
-            </h3>
+            </h2>
         <hr>
 
         {% block body %}{% endblock %}    
