can't get arrows to render

--- a/app/templates/ceremony.html
+++ b/app/templates/ceremony.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<link rel="stylesheet" href="dist/basicLightbox.min.css">
-<script src="dist/basicLightbox.min.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -863,7 +861,7 @@
       <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_106.jpeg" style="width:100%">
     </div>
     <div class="mySlides">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_107.jpeg" style="width:100%"
+      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_107.jpeg" style="width:100%">
     </div>
     <div class="mySlides">
       <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_108.jpeg" style="width:100%">
@@ -1229,7 +1227,7 @@
     <!-- Next/previous controls -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
+
   </div>
 
 {% endblock %}
