--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,8 @@
             </h2>
         <hr>
 
-        {% block body %}{% endblock %}    
+        {% block body %}
+        
+        {% endblock %}    
     </body>
 </html>
