styling is coming along

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,13 +1,45 @@
+html {
+  background-color: black;
+  font-family: 'Pacifico', cursive;
+  color: violet;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+h2 {
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+h3 {
+  margin-left: 20px;
+  color: white;
+}
+
 section {
-  max-width: 800px;
+  display: block;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;;
+  /* position: center; */
+  background-color: black;
+  width: 90%;
+  max-width: 1200px;
+  border: solid violet;
 }
 .pre-gallery {
   display: grid;
   grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   justify-content: center;
   align-items: center;
-  margin: auto;
+  /* margin: auto; */
   grid-gap: 0;
+  padding-left: 30px;
 
 }
 
@@ -16,8 +48,9 @@ section {
   grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   justify-content: center;
   align-items: center;
-  margin: auto;
+  /* margin: auto; */
   grid-gap: 0;
+  padding-left: 30px;
 
 }
 
@@ -26,15 +59,20 @@ section {
   grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   justify-content: center;
   align-items: center;
-  margin: auto;
+  /* margin: auto; */
   grid-gap: 0;
+  padding-left: 30px;
 
 }
 
 img {
-  height: 50%;
-  width: 50%;
-  margin: auto;
+  height: 70%;
+  width: 70%;
+  margin-left: 3px;
+  margin-right: 3px;
+  margin-bottom: 10px;
+  padding: 0px;
+
 }
 
 
@@ -55,7 +93,7 @@ img {
 /* Modal Content */
 .modal-content {
   position: relative;
-  background-color: #fefefe;
+  background-color: black;
   margin: auto;
   padding: 0;
   width: 90%;
@@ -115,21 +153,21 @@ img {
 }
 
 /* Number text (1/3 etc) */
-.numbertext {
+/* .numbertext {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
-}
+} */
 
-/* Caption text */
+/* Caption text
 .caption-container {
   text-align: center;
   background-color: black;
   padding: 2px 16px;
   color: white;
-}
+} */
 
 img.demo {
   opacity: 0.6;
