--- a/app/templates/ceremony.html
+++ b/app/templates/ceremony.html
@@ -6,7 +6,7 @@
 {% block body %}
 <section class="main">
 <h3>PRE-CEREMONY</h3>
-  <div class="pre-gallery"  id="gallery">
+  <div class="pre-gallery">
     <div class="pic">
       <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/pre-ceremony/1.jpeg" onclick="openModal();currentSlide(1)" class="hover-shadow">
     </div>
@@ -60,8 +60,7 @@
     </div>
   </div>
 <h3>CEREMONY</h3>
-  <div class="gallery"  id="gallery" >
-    
+  <div class="gallery">
     <div class="pic">
       <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_021.jpeg" onclick="openModal();currentSlide(18)" class="hover-shadow">
     </div>
@@ -316,7 +315,7 @@
     </div>
   </div>
 <h3>POST CEREMONY</h3>
-  <div class="post-gallery"  id="gallery" >
+  <div class="post-gallery">
     <div class="pic">
       <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_004.jpeg" onclick="openModal();currentSlide(101)" class="hover-shadow">
     </div>
@@ -736,7 +735,7 @@
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_048.jpeg" style="width:100%; height:100%;">
         </div>
         <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_049.jpeg" ostyle="width:100%; height:100%;">
+          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_049.jpeg" style="width:100%; height:100%;">
         </div>
         <div class="mySlides">
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_050.jpeg" style="width:100%; height:100%;">
@@ -745,7 +744,7 @@
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_051.jpeg" style="width:100%; height:100%;">
         </div>
         <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_052.jpeg" ostyle="width:100%; height:100%;">
+          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_052.jpeg" style="width:100%; height:100%;">
         </div>
         <div class="mySlides">
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_053.jpeg" style="width:100%; height:100%;">
@@ -874,7 +873,7 @@
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_111.jpeg" style="width:100%; height:100%;">
         </div>
         <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_112.jpeg" ostyle="width:100%; height:100%;">
+          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_112.jpeg" style="width:100%; height:100%;">
         </div>
         <div class="mySlides">
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ceremony/File_113.jpeg" style="width:100%; height:100%;">
@@ -1123,7 +1122,7 @@
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_085.jpeg" style="width:100%; height:100%;">
         </div>
         <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_086.jpeg" style="width:100%; height:100%;"
+          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_086.jpeg" style="width:100%; height:100%;">
         </div>
         <div class="mySlides">
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_087.jpeg" style="width:100%; height:100%;">
@@ -1224,7 +1223,6 @@
         <div class="mySlides">
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_132.jpeg" style="width:100%; height:100%;">
         </div>
-
       </div>
 </div>
 {% endblock %}
