--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap" rel="stylesheet">
         <script type="text/javascript" src="static/scripts/gallery.js"></script>
         {% block head %}{% endblock %}
     </head>
@@ -16,7 +19,6 @@
                 <a href="{{ url_for('history') }}">History</a>
                 <a href="{{ url_for('contact') }}">Contact</a>
             </h2>
-        <hr>
 
         {% block body %}
         
