--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
+
 {% block head %}
+<style>
+    body {
+      height: 800px;
+      margin: 0px;
+      background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_087.jpeg');
+      background-height: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+</style>
 {% endblock %}
 
 {% block body %}
 
 
-<div class="bg"></div>
 
 {% endblock %}
