--- a/app/templates/ceremony.html
+++ b/app/templates/ceremony.html
@@ -614,7 +614,15 @@
       <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_132.jpeg" onclick="openModal();currentSlide(199)" class="hover-shadow">
     </div>
   </div>
-</section>
+
+<h3>HIGHLIGHTS REEL</h3>
+  <div class="video-gallery">
+    <video width="50%" controls>
+      <source src="https://video-liz-and-meg.s3.us-east-2.amazonaws.com/Meg+%26+Liz+12.21.20.mp4">
+    </video> 
+  </div> 
+
+</section>   
 
 <!-- The Modal/Lightbox -->
 <div id="myModal" class="modal">
@@ -1225,4 +1233,6 @@
         </div>
       </div>
 </div>
+
+ 
 {% endblock %}
