--- a/app/templates/ceremony.html
+++ b/app/templates/ceremony.html
@@ -5,6 +5,35 @@
 
 {% block body %}
 <section class="main">
+<p>
+Getting married was an ongoing discussion, and we had formally gotten engaged in 2019, planning to have a wedding in 2020. By springtime, it became obvious that our plans would need to wait.
+We went though several iterations of plans before deciding to strip all of the complications away and just do it!
+</p>
+<br>
+<p>
+The date, Dec 21, 2020 was the Winter Solsice, and a great celestial conjunction of Saturn and Jupiter (link https://www.nasa.gov/feature/the-great-conjunction-of-jupiter-and-saturn).
+We also started our relationship right around the Winter Solstice, so it has always held significance. The closer we got to it, that date seemed like the perfect one for our marriage to begin.
+</p>
+<br>
+<p>
+We decided on Frick Park, in Pittsburgh, PA for our ceremony, for obvious COVID reasons, but more importantly, because this is where we had our first date... way way back in 2009.
+Pennsylvania has a Quaker, or Self-Uniting, marriage option. And so we had our four closest Pittsburgh-based friends help unite us.
+Erin, Katie, and Lauren offered their own words, and Bill pronounced us married.
+</p>
+<br>
+<p>
+Because we couldn't do food and drink safely indoors, and because it was freezing outdoors, we handed out 'Reception-to-Go' bags to our friends to take home.
+The bags were full of our favorite things - a meal from Colangelo's in the Strip District, tea cakes from The Butterwood in Lawrenceville, Ale8 from Meg's hometown in Kentucky, and of course coffee.☕️
+While a big reception would've been great, it was awesome to end the day on the couch enjoying these favorite goodies.
+</p>
+<br>
+<p>
+Many special thanks to Carrie and Clayton for their awesome photography and video contributions. You both went above and beyond anything we could have imagined!
+</p>
+<br>
+<p>
+We really wanted to spend the day with you, our friends and family, and are looking forward to having everyone together for a celebration in the (hopefully) not-too-distant future!
+</p>
 <h3>PRE-CEREMONY</h3>
   <div class="pre-gallery">
     <div class="pic">
