--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,10 +14,7 @@
     <body>
         <h1>liz & meg.</h1>
             <h2>
-                <a href="{{ url_for('index') }}">Home</a>
-                <a href="{{ url_for('ceremony') }}">Ceremony</a>
-                <a href="{{ url_for('history') }}">History</a>
-                <a href="{{ url_for('contact') }}">Contact</a>
+                <a href="{{ url_for('index') }}">Home</a>|<a href="{{ url_for('ceremony') }}">Ceremony</a>|<a href="{{ url_for('history') }}">History</a>|<a href="{{ url_for('contact') }}">Contact</a>
             </h2>
 
         {% block body %}
