--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -39,11 +39,13 @@ p {
   display: block;
   margin: 0 auto;
   color: white;
-  padding: 10px 10px 10px 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px
 }
 
 br {
-  line-height: 30px;
+  line-height: 20px;
 }
 section {
   /* display: block; */
