--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -43,8 +43,8 @@
     <label for="lname">Last Name</label>
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-    <label for="lname">Email</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your email address..">
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email" placeholder="Your email address..">
 
 
     <label for="message">Subject</label>
