using seegrid instead

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -52,9 +52,9 @@
         {% for error in form.email.errors %}
           <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
-        {{ form.body.label }}<br>
-        {{ form.body(size=64) }}<br>
-        {% for error in form.body.errors %}
+        {{ form.greeting.label }}<br>
+        {{ form.greeting(size=64) }}<br>
+        {% for error in form.greeting.errors %}
           <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </p>
