emails are sending and adjusted the index background image to fit 100vh, rather than an explicit px amount

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% block head %}
 <style>
     body {
-      height: 800px;
+      height: 100vh;
       margin: 0px;
       background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_087.jpeg');
       background-height: 100%;
