added some sick emoji action

--- a/app/templates/ceremony.html
+++ b/app/templates/ceremony.html
@@ -11,7 +11,7 @@ We went though several iterations of plans before deciding to strip all of the c
 </p>
 <br>
 <p>
-The date, Dec 21, 2020 was the Winter Solsice, and a great celestial conjunction of Saturn and Jupiter (link https://www.nasa.gov/feature/the-great-conjunction-of-jupiter-and-saturn).
+The date, Dec 21, 2020 was the Winter Solsice, and a great celestial conjunction of <a href="https://www.nasa.gov/feature/the-great-conjunction-of-jupiter-and-saturn">🪐Saturn and Jupiter✨</a>.
 We also started our relationship right around the Winter Solstice, so it has always held significance. The closer we got to it, that date seemed like the perfect one for our marriage to begin.
 </p>
 <br>
