--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,18 @@
       background-repeat: no-repeat;
       background-size: cover;
     }
+    @media only screen and (max-width: 600px) {
+      body {
+        height: 100vh;
+        margin: 0px;
+        background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/mobile_background.jpg');
+        background-height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    }
+
 </style>
 {% endblock %}
 
