--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,19 +6,42 @@
       height: 100vh;
       margin: 0px;
       background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_087.jpeg');
-      background-height: 100%;
-      background-position: center;
-      background-repeat: no-repeat;
+      -webkit-background-size: 100%; 
+      -moz-background-size: 100%; 
+      -o-background-size: 100%; 
+      background-size: 100%; 
+      -webkit-background-size: cover; 
+      -moz-background-size: cover; 
+      -o-background-size: cover; 
       background-size: cover;
     }
-    @media only screen and (max-width: 600px) {
+    @media only screen and (max-width: 981px) {
       body {
         height: 100vh;
         margin: 0px;
-        background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/mobile_background.jpg');
-        background-height: 100%;
-        background-position: center;
-        background-repeat: no-repeat;
+        background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ipad.jpg');
+        -webkit-background-size: 100%; 
+        -moz-background-size: 100%; 
+        -o-background-size: 100%; 
+        background-size: 100%; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover; 
+        background-size: cover;
+      }
+    }
+    @media only screen and (max-width: 375px) {
+      body {
+        height: 100vh;
+        margin: 0px;
+        background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/iphonex.jpg');
+        -webkit-background-size: 100%; 
+        -moz-background-size: 100%; 
+        -o-background-size: 100%; 
+        background-size: 100%; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover; 
         background-size: cover;
       }
     }
