--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -102,7 +102,6 @@ img {
   margin-left: 3px;
   margin-right: 3px;
   margin-bottom: 10px;
-  padding: 0px;
 }
 
 
@@ -161,13 +160,16 @@ img {
   width: auto;
   padding: 16px;
   margin-top: -50px;
-  color: white;
+  margin-right: 3px;
+  margin-left: 3px;
+  color: violet;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 25px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
   -webkit-user-select: none;
+  z-index: 1;
 }
 
 /* Position the "next button" to the right */
@@ -215,7 +217,6 @@ img.hover-shadow {
 .hover-shadow:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
 
 @media only screen and (max-width: 600px) {
   h1 {
