tweaked copy and zuzshed styling:

--- a/app/templates/ceremony.html
+++ b/app/templates/ceremony.html
@@ -5,35 +5,24 @@
 
 {% block body %}
 <section class="main">
-<p>
-Getting married was an ongoing discussion, and we had formally gotten engaged in 2019, planning to have a wedding in 2020. By springtime, it became obvious that our plans would need to wait.
-We went though several iterations of plans before deciding to strip all of the complications away and just do it!
-</p>
-<br>
-<p>
-The date, Dec 21, 2020 was the Winter Solsice, and a great celestial conjunction of <a href="https://www.nasa.gov/feature/the-great-conjunction-of-jupiter-and-saturn">🪐Saturn and Jupiter✨</a>.
-We also started our relationship right around the Winter Solstice, so it has always held significance. The closer we got to it, that date seemed like the perfect one for our marriage to begin.
-</p>
-<br>
-<p>
-We decided on Frick Park, in Pittsburgh, PA for our ceremony, for obvious COVID reasons, but more importantly, because this is where we had our first date... way way back in 2009.
-Pennsylvania has a Quaker, or Self-Uniting, marriage option. And so we had our four closest Pittsburgh-based friends help unite us.
-Erin, Katie, and Lauren offered their own words, and Bill pronounced us married.
-</p>
-<br>
-<p>
-Because we couldn't do food and drink safely indoors, and because it was freezing outdoors, we handed out 'Reception-to-Go' bags to our friends to take home.
-The bags were full of our favorite things - a meal from Colangelo's in the Strip District, tea cakes from The Butterwood in Lawrenceville, Ale8 from Meg's hometown in Kentucky, and of course coffee.☕️
-While a big reception would've been great, it was awesome to end the day on the couch enjoying these favorite goodies.
-</p>
-<br>
-<p>
-Many special thanks to Carrie and Clayton for their awesome photography and video contributions. You both went above and beyond anything we could have imagined!
-</p>
-<br>
-<p>
-We really wanted to spend the day with you, our friends and family, and are looking forward to having everyone together for a celebration in the (hopefully) not-too-distant future!
-</p>
+<p> HELLO! We're so glad you're here! 
+Get ready for some premium wedding content.
+Check out the pics of us getting hitched in Frick Park, in the Paris of Appalachia, Pittsburgh, PA!
+Fun fact, Frick Park was where we had our first date many moons ago (2009).</p>
+
+<p>We were lucky enough to have 2 great friends capture the footage for us, and put it together as a very cute video. Thank you so much to Carrie & Clayton for the wonderful gift!</p>
+
+<p>December 21, 2020 was the Winter Solstice! The great <a href="https://www.nasa.gov/feature/the-great-conjunction-of-jupiter-and-saturn">🪐conjunction!✨</a> AND Our 4th anniversary! Talk about a hat trick!! (hockey! woo!)</p>
+
+<p>We got married the old fashioned Quaker way and had a self-uniting ceremony... a fun feature of living in the Commonwealth of PA.</p>
+
+<p>Our dear dear friends (and covid bubble) Katie & Bill, Erin, and Lauren graciously participated in our non-traditional (yet still old fashioned -- see above)
+and offered their blessings. They also said some really rad stuff about us.</p>
+
+<p>It was sweet 😊</p>
+
+<p>After 2 hours, and somehow making a Quaker ceremony longer than a Catholic Mass, we sent our friends off with dinner to-go. We went home to our fur-children. There was ice cream pie. There were sweatpants. It was all perfect.</p>
+</br>
 <h3>PRE-CEREMONY</h3>
   <div class="pre-gallery">
     <div class="pic">
@@ -515,45 +504,6 @@ We really wanted to spend the day with you, our friends and family, and are look
     </div>
     <div class="pic">
       <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_099.jpeg" onclick="openModal();currentSlide(155)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_104.jpeg" onclick="openModal();currentSlide(156)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_106.jpeg" onclick="openModal();currentSlide(157)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_107.jpeg" onclick="openModal();currentSlide(158)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_108.jpeg" onclick="openModal();currentSlide(159)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_112.jpeg" onclick="openModal();currentSlide(160)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_114.jpeg" onclick="openModal();currentSlide(161)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_117.jpeg" onclick="openModal();currentSlide(162)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_118.jpeg" onclick="openModal();currentSlide(163)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_119.jpeg" onclick="openModal();currentSlide(164)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_121.jpeg" onclick="openModal();currentSlide(165)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_122.jpeg" onclick="openModal();currentSlide(166)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_127.jpeg" onclick="openModal();currentSlide(167)" class="hover-shadow">
-    </div>
-    <div class="pic">
-      <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_132.jpeg" onclick="openModal();currentSlide(168)" class="hover-shadow">
     </div>
   </div>
 
@@ -1046,45 +996,6 @@ We really wanted to spend the day with you, our friends and family, and are look
         </div>
         <div class="mySlides">
           <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_099.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_104.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_106.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_107.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_108.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_112.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_114.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_117.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_118.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_119.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_121.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_122.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_127.jpeg" style="width:100%; height:100%;">
-        </div>
-        <div class="mySlides">
-          <img src="https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_132.jpeg" style="width:100%; height:100%;">
         </div>
       </div>
 </div>
