--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -6,13 +6,18 @@ html {
   margin-bottom: auto;;
 }
 
+.home {
+  margin-top: 300px;
+  margin-left: 105px;
+}
+
 h1 {
   font-family: 'Pacifico', cursive;
   font-size: 90px;
   color: violet;
   margin-top: 0px;
   margin-left: 105px;
-  margin-right: auto;
+  margin-bottom: 30px
 }
 
 h2 {
@@ -25,6 +30,10 @@ h2 {
 h3 {
   margin-left: 20px;
   color: white;
+}
+
+.home > h3 {
+  margin-left: 0px;
 }
 
 a {
