--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,15 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap" rel="stylesheet">
         <script type="text/javascript" src="static/scripts/gallery.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-B2PK7323SH"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-B2PK7323SH');
+        </script>
         {% block head %}{% endblock %}
     </head>
     <body>
