--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
     <body>
         <h1>liz & meg.</h1>
             <h2>
-                <a href="{{ url_for('index') }}">Home</a>|<a href="{{ url_for('ceremony') }}">Ceremony</a>|<a href="mailto:us@liz-and-meg.com">Send us a message 💌</a>
+                <a href="{{ url_for('index') }}">Home</a>|<a href="{{ url_for('ceremony') }}">Ceremony</a>|<a href="mailto:themrs.pantsfam.com">Send us a message 💌</a>
             </h2>
 
         {% block body %}
