--- a/app/templates/ceremony.html
+++ b/app/templates/ceremony.html
@@ -17,7 +17,7 @@ Fun fact, Frick Park was where we had our first date many moons ago (2009).</p>
 <p>We got married the old fashioned Quaker way and had a self-uniting ceremony... a fun feature of living in the Commonwealth of PA.</p>
 
 <p>Our dear dear friends (and covid bubble) Katie & Bill, Erin, and Lauren graciously participated in our non-traditional (yet still old fashioned -- see above)
-and offered their blessings. They also said some really rad stuff about us.</p>
+wedding and offered their blessings. They also said some really rad stuff about us.</p>
 
 <p>It was sweet 😊</p>
 
