--- a/app/templates/hotel.html
+++ b/app/templates/hotel.html
@@ -4,25 +4,27 @@
 <section class="hotel">
 <h3>Two hotel blocks have been reserved for September 17-19th:</h3>
 
-<div class="hotels">
-  <div class="hotel" >
-    <h4>Downtown option:</h4>
-    <h5>21c Museum Hotel Lexington</h5>
-    <p>167 W Main St</p>
-    <p>Lexington, KY 40507</p>
-    <p>(859) 899-6800</p>
-    <p>preference code: <a href="https://book.passkey.com/event/50203096/owner/49548491/home">PANTOO</a><p/>
-    <p>Last day to book: August 2</p>
+  <div class="hotels_grid">
+    <div class="hotel" >
+      <h4>Downtown option:</h4>
+      <h5>21c Museum Hotel Lexington</h5>
+      <p>167 W Main St</p>
+      <p>Lexington, KY 40507</p>
+      <p>(859) 899-6800</p>
+      <p>preference code: <a class="shown_link" href="https://book.passkey.com/event/50203096/owner/49548491/home">PANTOO</a><p/>
+      <p>Last day to book: August 2</p>
+    </div>
 
-  <div class="hotel" >
-    <h4>Near the interstate option:</h4>
-    <h5>Courtyard Lexington North</h5>
-    <p>775 Newtown Court</p>
-    <p>Lexington, KY 40511</p>
-    <p>(859) 253-4646</p>
-    <p><a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1618098204801&key=GRP&app=resvlink">Pantalone Wedding Room Block</a></p>
-    <p>Last day to book: Aug 20</p>
+    <div class="hotel" >
+      <h4>Near the interstate option:</h4>
+      <h5>Courtyard Lexington North</h5>
+      <p>775 Newtown Court</p>
+      <p>Lexington, KY 40511</p>
+      <p>(859) 253-4646</p>
+      <p><a class="shown_link" href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1618098204801&key=GRP&app=resvlink">Pantalone Wedding Room Block</a></p>
+      <p>Last day to book: Aug 20</p>
+    </div>
 
-</div>
+  </div>
 </section>
 {% endblock %}
