--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -21,13 +21,31 @@ h1 {
 }
 
 h2 {
+  min-width: 601px;
   font-family: 'Open Sans', sans-serif;
+  text-align: center;
   color: white;
   margin-left: 105px;
   margin-right: auto;
 }
 
+/* .topnav {
+  min-width: 601px;
+  display: none;
+} */
+
 h3 {
+  margin-left: 20px;
+  color: white;
+}
+
+h4 {
+  margin-left: 20px;
+  color: white;
+}
+
+h5 {
+  font-size: 30px;
   margin-left: 20px;
   color: white;
 }
@@ -55,6 +73,7 @@ p {
 br {
   line-height: 20px;
 }
+
 section {
   font-family: 'Open Sans', sans-serif;
   margin-left: auto;
@@ -67,31 +86,16 @@ section {
   border-radius: 30px;
 }
 
-.pre-gallery {
+.hotels_grid {
   display: grid;
-  grid-template-columns: 20% 20% 20% 20% 20%;
-  justify-content: center;
-  align-items: center;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto;
   grid-gap: 0;
-  padding-left: 30px;
 }
 
-.gallery {
-  display: grid;
-  grid-template-columns: 20% 20% 20% 20% 20%;
-  justify-content: center;
-  align-items: center;
-  grid-gap: 0;
-  padding-left: 30px;
-}
-
-.post-gallery {
-  display: grid;
-  grid-template-columns: 20% 20% 20% 20% 20%;
-  justify-content: center;
-  align-items: center;
-  grid-gap: 0;
-  padding-left: 30px;
+.shown_link {
+  color: violet;
+  cursor: pointer;
 }
 
 .video-gallery {
@@ -105,149 +109,83 @@ section {
   margin: 0 auto;
 }
 
-img {
-  height: 70%;
-  width: 70%;
-  margin-left: 3px;
-  margin-right: 3px;
-  margin-bottom: 10px;
-}
-
-
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: black;
-}
-
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: black;
-  margin: auto;
-  padding: 0;
-  width: 90%;
-  max-width: 1200px;
-}
-
-/* The Close Button */
-.close {
-  color: white;
-  position: absolute;
-  top: 10px;
-  right: 25px;
-  font-size: 35px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #999;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* Hide the slides by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  margin-right: 3px;
-  margin-left: 3px;
-  color: violet;
-  font-weight: bold;
-  font-size: 25px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-  z-index: 1;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-/* .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-} */
-
-/* Caption text
-.caption-container {
-  text-align: center;
-  background-color: black;
-  padding: 2px 16px;
-  color: white;
-} */
-
-img.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-
-img.hover-shadow {
-  transition: 0.3s;
-}
-
-.hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
 @media only screen and (max-width: 600px) {
+  .topnav {
+    overflow: hidden;
+    background-color: black;
+    position: relative;
+  }
+
+  .topnav a.logo {
+    position: relative;
+    font-family: 'Pacifico', cursive;
+    font-size: 5vw;
+    color: violet;
+    /* margin-top: 0px; */
+  }
+  
+  .topnav #links {
+    display: none;
+  }
+  
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+
+
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
   h1 {
-    font-size: 50px;
-    margin: auto;
+    display: none;
   }
 
   h2 {
-    margin: auto;
-    font-size: 15px;
-    padding-bottom: 8px;
+    display: none;
   }
 
-  .pre-gallery {
-    padding-left: 15px;
+  h3 {
+    display: block;
+    margin-top: 8px;
+    /* margin-left: 3px;
+    margin-right: 3px; */
+  }
+
+  p {
+    padding: 3px;
+    display: block;
+  }
+
+  .hotels_grid {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-gap: 0;
   }
   
-  .gallery {
-    padding-left: 15px;
+  .hotel {
+    margin-bottom: 8px;
   }
-  
-  .post-gallery {
-    padding-left: 15px;
-  }
+  /* .hotels_grid>h5 {
+    margin: auto;
+  } */
+  /* .active {
+    background-color: black;
+    color: white;
+  } */
 }
