--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -109,6 +109,12 @@ section {
   margin: 0 auto;
 }
 
+@media only screen and (min-width: 601px) {
+  .topnav {
+    display: none;
+  }
+  
+}
 @media only screen and (max-width: 600px) {
   .topnav {
     overflow: hidden;
@@ -119,7 +125,7 @@ section {
   .topnav a.logo {
     position: relative;
     font-family: 'Pacifico', cursive;
-    font-size: 5vw;
+    font-size: 7vw;
     color: violet;
     /* margin-top: 0px; */
   }
@@ -140,16 +146,19 @@ section {
     background: black;
     display: block;
     position: absolute;
-    right: 0;
-    top: 0;
-
-
+    right: 5;
+    top: 5;
   }
   
   .topnav a:hover {
     background-color: #ddd;
     color: black;
   }
+
+  /* .logo {
+    background-color:#04AA6D;
+    color: white;
+  } */
 
   h1 {
     display: none;
@@ -179,13 +188,9 @@ section {
   }
   
   .hotel {
+    padding-top: 8px;
     margin-bottom: 8px;
   }
-  /* .hotels_grid>h5 {
-    margin: auto;
-  } */
-  /* .active {
-    background-color: black;
-    color: white;
-  } */
+
+
 }
