looking better but needs padding and margins adjusted

--- a/app/templates/hotel.html
+++ b/app/templates/hotel.html
@@ -11,7 +11,7 @@
       <p>167 W Main St</p>
       <p>Lexington, KY 40507</p>
       <p>(859) 899-6800</p>
-      <p>preference code: <a class="shown_link" href="https://book.passkey.com/event/50203096/owner/49548491/home">PANTOO</a><p/>
+      <p>preference code: <a class="shown_link" href="https://book.passkey.com/event/50203096/owner/49548491/home">PANTOO</a></p>
       <p>Last day to book: August 2</p>
     </div>
 
