--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -25,7 +25,7 @@ h2 {
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   color: white;
-  margin-left: 105px;
+  margin-left: auto;
   margin-right: auto;
 }
 
@@ -46,6 +46,8 @@ h4 {
 
 h5 {
   font-size: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   margin-left: 20px;
   color: white;
 }
@@ -93,6 +95,10 @@ section {
   grid-gap: 0;
 }
 
+.hotel {
+  margin-bottom: 20px;
+}
+
 .shown_link {
   color: violet;
   cursor: pointer;
@@ -119,17 +125,10 @@ section {
   .topnav {
     overflow: hidden;
     background-color: black;
+    outline: solid white;
     position: relative;
   }
 
-  .topnav a.logo {
-    position: relative;
-    font-family: 'Pacifico', cursive;
-    font-size: 7vw;
-    color: violet;
-    /* margin-top: 0px; */
-  }
-  
   .topnav #links {
     display: none;
   }
@@ -141,13 +140,15 @@ section {
     font-size: 17px;
     display: block;
   }
+
   
   .topnav a.icon {
-    background: black;
+    outline: solid red;
+    background: violet;
     display: block;
     position: absolute;
-    right: 5;
-    top: 5;
+    right: 0;
+    top: 0;
   }
   
   .topnav a:hover {
@@ -155,10 +156,12 @@ section {
     color: black;
   }
 
-  /* .logo {
-    background-color:#04AA6D;
-    color: white;
-  } */
+  .topnav a.logo {
+    font-family: 'Pacifico', cursive;
+    font-size: 7vw;
+    color: violet;
+    /* margin-top: 0px; */
+  }
 
   h1 {
     display: none;
@@ -170,9 +173,21 @@ section {
 
   h3 {
     display: block;
-    margin-top: 8px;
-    /* margin-left: 3px;
-    margin-right: 3px; */
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  h4 {
+    display: block;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  h5 {
+    display: block;
+    margin-left: 5px;
+    margin-right: 5px;
+
   }
 
   p {
@@ -186,10 +201,19 @@ section {
     grid-template-rows: auto auto;
     grid-gap: 0;
   }
+
+  .party {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-gap: 0;
+  }
   
   .hotel {
     padding-top: 8px;
     margin-bottom: 8px;
+    padding-left: 8px;
+    padding-right: 5px;
   }
 
 
