--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -203,18 +203,28 @@ section {
   }
 
   .party {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto;
-    grid-gap: 0;
+    padding-top: 8px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding-left: 8px;
+    padding-right: 5px;
   }
   
   .hotel {
     padding-top: 8px;
+    margin-top: 8px;
     margin-bottom: 8px;
     padding-left: 8px;
     padding-right: 5px;
   }
 
+  .main {
+    padding-top: 8px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding-left: 8px;
+    padding-right: 5px;
+
+  }
 
 }
